[package]
name = "rustcolorizer"
version = "1.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
#clap_generate = "3.0.*"
#clap_complete_fig = "4.5.*"
regex = "1.10.*"
fancy-regex = "0.13.*"
log = "0.4.*"
env_logger = "0.11.*"
signal-hook = "0.3.*"
phf = "0.11.*"